[gd_scene load_steps=11 format=3 uid="uid://b8y53lev1usj6"]

[ext_resource type="PackedScene" uid="uid://cby7r5nm4vsfm" path="res://Scenes/MainHeader.tscn" id="1_141gd"]
[ext_resource type="Script" path="res://Scenes/MainScene.gd" id="1_rpp8k"]
[ext_resource type="PackedScene" uid="uid://be4dvayan87rs" path="res://PraxisMapper/Controls/MinOfflineData.tscn" id="3_rmlky"]
[ext_resource type="PackedScene" uid="uid://8cjjtj88jnmt" path="res://PraxisMapper/Scripts/PlaceTracker.tscn" id="4_gae5v"]
[ext_resource type="PackedScene" uid="uid://mec5wqbebbnw" path="res://Components/OrdersPanel.tscn" id="5_eub6p"]
[ext_resource type="PackedScene" uid="uid://b1bckdbxcwv0d" path="res://Scenes/SecurityScene.tscn" id="6_u76nx"]
[ext_resource type="Texture2D" uid="uid://k8ue3jveqnhc" path="res://Resources/titleimage.png" id="8_svb7d"]
[ext_resource type="Theme" uid="uid://qpjfkm1dnyec" path="res://Resources/baseTheme.tres" id="9_ppml7"]
[ext_resource type="Texture2D" uid="uid://bh4ujq41235jl" path="res://Resources/Compass.png" id="10_g67b8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5bhj1"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_rpp8k")

[node name="PlaceTracker" parent="." instance=ExtResource("4_gae5v")]

[node name="MinOfflineData" parent="." instance=ExtResource("3_rmlky")]

[node name="scroll" type="ScrollContainer" parent="."]
offset_right = 1080.0
offset_bottom = 1920.0

[node name="vbox" type="VBoxContainer" parent="scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainHeader" parent="scroll/vbox" instance=ExtResource("1_141gd")]

[node name="OrdersScene" parent="scroll/vbox" instance=ExtResource("5_eub6p")]
position = Vector2(0, 210)

[node name="SecurityScene" parent="scroll/vbox" instance=ExtResource("6_u76nx")]
position = Vector2(0, 527)

[node name="TextureRect" type="TextureRect" parent="scroll/vbox"]
material = SubResource("ShaderMaterial_5bhj1")
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="scroll/vbox"]
position = Vector2(0, 1311)
texture = ExtResource("8_svb7d")
centered = false

[node name="lblHeading" type="Label" parent="."]
offset_left = 337.0
offset_top = 116.0
offset_right = 410.0
offset_bottom = 139.0
theme = ExtResource("9_ppml7")
text = "Heading: "

[node name="compassTexture" type="TextureRect" parent="."]
offset_left = 497.0
offset_top = 80.0
offset_right = 625.0
offset_bottom = 208.0
pivot_offset = Vector2(64, 64)
texture = ExtResource("10_g67b8")
